2008-10-23  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppd-to-xml.in, lib/Foomatic/DB.pm: Moved driver and PDL
	  magic of the XML file generation into lib/Foomatic/DB.pm.

2008-10-22  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppd-to-xml.in, Makefile.in, configure.ac,
	  lib/Foomatic/DB.pm: Added new "foomatic-ppd-to-xml" to generate
	  Foomatic XML files corresponding to a given PPD file.

	* lib/Foomatic/DB.pm: Improved "normalizename()" function for
	  sorting printer, manufacturer, or driver lists.

2008-10-02  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Changed method to find all printers
	  supported by a given driver, so that printer/driver relations
	  can also be defined by a <drivers> section in the printer entry.

2008-09-06  Dafydd Crosby <dcrosby@userful.com>

	* ppdtoxml: Can now add extra drivers to XML more easily.

2008-09-03  Tim Waugh <twaugh@redhat.com>

	* acinclude.m4: Fixed underquoted definitions.

2008-09-02  Tim Waugh <twaugh@redhat.com>

	* lib/Foomatic/DB.pm: Prevent busy loop when trying to shorten
	PPD nicknames like "HP OfficeJet LX
	Foomatic/gutenprint-ijs-simplified.5.0".

2008-08-18  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Use "Oki" instead of "Okidata" when
	  cleaning manufacturer names.

2008-08-12  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added on-disk cache functionality for the
	  database overview Perl structure. To activate this functionality
	  one does simply "use Foomatic::DB; my $db = new Foomatic::DB;
	  $db->{'overviewfile'} = "<filename>";". The CGI scripts of the
	  OpenPrinting web site generate overviews very frequently, so
	  this should reduce the server load a lot (merged from stable
	  branch).

	* ppdtoxml: Now adds the <drivers> tag, inserting the preferred 
	  driver automatically. The next release will allow the insertion
	  of extra driver entries (from Dafydd Crosby, merged from stable
	  branch).
